# uni-nickname-discord-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
bot/: __init__.py
