[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["The456gamer <the456gamer@the456gamer.dev>"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
